# emscripten_sdl_example

./: .gitignore  CMakeLists.txt  README.md  Utilities.cpp  build.py  conanfile.py  main.cpp
driver/: CMakeLists.txt  main.cpp
runtime/: index.js  index.wasm.map
scripts/: __init__.py  env_tools.py  script_utils.py  start_up.py
source/: ApplicationContext.hpp  CMakeLists.txt  Utilities.cpp  Utilities.hpp  config.hpp
source/context/: CMakeLists.txt  VisualContext.hpp  context_functions.hpp  initialize_context.hpp
source/grid/: CMakeLists.txt  Coordinate.hpp  GenericGrid.hpp  GridContext.hpp  IDGrid.cpp  IDGrid.hpp  cast_utils.hpp
source/model/: ModelContext.hpp  model_init.hpp
